jitlang/grammar/JITLangParser.cpp

// Generated from .\JITLang.g4 by ANTLR 4.9



#include "JITLangParser.h"


using namespace antlrcpp;
using namespace antlr4;

JITLangParser::JITLangParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

JITLangParser::~JITLangParser() {
  delete _interpreter;
}

std::string JITLangParser::getGrammarFileName() const {
  return "JITLang.g4";
}

const std::vector<std::string>& JITLangParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& JITLangParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

JITLangParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JITLangParser::FileContext::EOF() {
  return getToken(JITLangParser::EOF, 0);
}

std::vector<tree::TerminalNode *> JITLangParser::FileContext::COMMENT() {
  return getTokens(JITLangParser::COMMENT);
}

tree::TerminalNode* JITLangParser::FileContext::COMMENT(size_t i) {
  return getToken(JITLangParser::COMMENT, i);
}

std::vector<JITLangParser::StmtContext *> JITLangParser::FileContext::stmt() {
  return getRuleContexts<JITLangParser::StmtContext>();
}

JITLangParser::StmtContext* JITLangParser::FileContext::stmt(size_t i) {
  return getRuleContext<JITLangParser::StmtContext>(i);
}


size_t JITLangParser::FileContext::getRuleIndex() const {
  return JITLangParser::RuleFile;
}


JITLangParser::FileContext* JITLangParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, JITLangParser::RuleFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(31);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(29);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case JITLangParser::T__1:
          case JITLangParser::T__2:
          case JITLangParser::T__7:
          case JITLangParser::T__10:
          case JITLangParser::T__11:
          case JITLangParser::T__12:
          case JITLangParser::IDENT:
          case JITLangParser::STRING:
          case JITLangParser::NUMBER: {
            setState(26);
            dynamic_cast<FileContext *>(_localctx)->stmtContext = stmt();
            dynamic_cast<FileContext *>(_localctx)->statements.push_back(dynamic_cast<FileContext *>(_localctx)->stmtContext);
            break;
          }

          case JITLangParser::T__0: {
            setState(27);
            match(JITLangParser::T__0);
            break;
          }

          case JITLangParser::COMMENT: {
            setState(28);
            match(JITLangParser::COMMENT);
            break;
          }

        default:
          throw NoViableAltException(this);
        } 
      }
      setState(33);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(35);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << JITLangParser::T__1)
      | (1ULL << JITLangParser::T__2)
      | (1ULL << JITLangParser::T__7)
      | (1ULL << JITLangParser::T__10)
      | (1ULL << JITLangParser::T__11)
      | (1ULL << JITLangParser::T__12)
      | (1ULL << JITLangParser::IDENT)
      | (1ULL << JITLangParser::STRING)
      | (1ULL << JITLangParser::NUMBER))) != 0)) {
      setState(34);
      dynamic_cast<FileContext *>(_localctx)->stmtContext = stmt();
      dynamic_cast<FileContext *>(_localctx)->statements.push_back(dynamic_cast<FileContext *>(_localctx)->stmtContext);
    }
    setState(37);
    match(JITLangParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

JITLangParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JITLangParser::ExprContext* JITLangParser::StmtContext::expr() {
  return getRuleContext<JITLangParser::ExprContext>(0);
}

JITLangParser::If_stmtContext* JITLangParser::StmtContext::if_stmt() {
  return getRuleContext<JITLangParser::If_stmtContext>(0);
}

JITLangParser::Function_defineContext* JITLangParser::StmtContext::function_define() {
  return getRuleContext<JITLangParser::Function_defineContext>(0);
}

JITLangParser::DefineContext* JITLangParser::StmtContext::define() {
  return getRuleContext<JITLangParser::DefineContext>(0);
}

JITLangParser::AssignContext* JITLangParser::StmtContext::assign() {
  return getRuleContext<JITLangParser::AssignContext>(0);
}


size_t JITLangParser::StmtContext::getRuleIndex() const {
  return JITLangParser::RuleStmt;
}


JITLangParser::StmtContext* JITLangParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 2, JITLangParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(44);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(39);
      expr(0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(40);
      if_stmt();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(41);
      function_define();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(42);
      define();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(43);
      assign();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_defineContext ------------------------------------------------------------------

JITLangParser::Function_defineContext::Function_defineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> JITLangParser::Function_defineContext::IDENT() {
  return getTokens(JITLangParser::IDENT);
}

tree::TerminalNode* JITLangParser::Function_defineContext::IDENT(size_t i) {
  return getToken(JITLangParser::IDENT, i);
}

JITLangParser::Typed_arg_listContext* JITLangParser::Function_defineContext::typed_arg_list() {
  return getRuleContext<JITLangParser::Typed_arg_listContext>(0);
}

std::vector<tree::TerminalNode *> JITLangParser::Function_defineContext::COMMENT() {
  return getTokens(JITLangParser::COMMENT);
}

tree::TerminalNode* JITLangParser::Function_defineContext::COMMENT(size_t i) {
  return getToken(JITLangParser::COMMENT, i);
}

std::vector<JITLangParser::StmtContext *> JITLangParser::Function_defineContext::stmt() {
  return getRuleContexts<JITLangParser::StmtContext>();
}

JITLangParser::StmtContext* JITLangParser::Function_defineContext::stmt(size_t i) {
  return getRuleContext<JITLangParser::StmtContext>(i);
}


size_t JITLangParser::Function_defineContext::getRuleIndex() const {
  return JITLangParser::RuleFunction_define;
}


JITLangParser::Function_defineContext* JITLangParser::function_define() {
  Function_defineContext *_localctx = _tracker.createInstance<Function_defineContext>(_ctx, getState());
  enterRule(_localctx, 4, JITLangParser::RuleFunction_define);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(JITLangParser::T__1);
    setState(47);
    dynamic_cast<Function_defineContext *>(_localctx)->name = match(JITLangParser::IDENT);
    setState(48);
    match(JITLangParser::T__2);
    setState(50);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JITLangParser::IDENT) {
      setState(49);
      typed_arg_list();
    }
    setState(52);
    match(JITLangParser::T__3);
    setState(55);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == JITLangParser::T__4) {
      setState(53);
      match(JITLangParser::T__4);
      setState(54);
      dynamic_cast<Function_defineContext *>(_localctx)->rettype = match(JITLangParser::IDENT);
    }
    setState(60);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JITLangParser::T__0) {
      setState(57);
      match(JITLangParser::T__0);
      setState(62);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(63);
    match(JITLangParser::T__5);
    setState(69);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << JITLangParser::T__0)
      | (1ULL << JITLangParser::T__1)
      | (1ULL << JITLangParser::T__2)
      | (1ULL << JITLangParser::T__7)
      | (1ULL << JITLangParser::T__10)
      | (1ULL << JITLangParser::T__11)
      | (1ULL << JITLangParser::T__12)
      | (1ULL << JITLangParser::IDENT)
      | (1ULL << JITLangParser::STRING)
      | (1ULL << JITLangParser::NUMBER)
      | (1ULL << JITLangParser::COMMENT))) != 0)) {
      setState(67);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case JITLangParser::T__1:
        case JITLangParser::T__2:
        case JITLangParser::T__7:
        case JITLangParser::T__10:
        case JITLangParser::T__11:
        case JITLangParser::T__12:
        case JITLangParser::IDENT:
        case JITLangParser::STRING:
        case JITLangParser::NUMBER: {
          setState(64);
          dynamic_cast<Function_defineContext *>(_localctx)->stmtContext = stmt();
          dynamic_cast<Function_defineContext *>(_localctx)->statements.push_back(dynamic_cast<Function_defineContext *>(_localctx)->stmtContext);
          break;
        }

        case JITLangParser::T__0: {
          setState(65);
          match(JITLangParser::T__0);
          break;
        }

        case JITLangParser::COMMENT: {
          setState(66);
          match(JITLangParser::COMMENT);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(71);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(72);
    match(JITLangParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_stmtContext ------------------------------------------------------------------

JITLangParser::If_stmtContext::If_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JITLangParser::ExprContext* JITLangParser::If_stmtContext::expr() {
  return getRuleContext<JITLangParser::ExprContext>(0);
}

std::vector<tree::TerminalNode *> JITLangParser::If_stmtContext::COMMENT() {
  return getTokens(JITLangParser::COMMENT);
}

tree::TerminalNode* JITLangParser::If_stmtContext::COMMENT(size_t i) {
  return getToken(JITLangParser::COMMENT, i);
}

std::vector<JITLangParser::StmtContext *> JITLangParser::If_stmtContext::stmt() {
  return getRuleContexts<JITLangParser::StmtContext>();
}

JITLangParser::StmtContext* JITLangParser::If_stmtContext::stmt(size_t i) {
  return getRuleContext<JITLangParser::StmtContext>(i);
}


size_t JITLangParser::If_stmtContext::getRuleIndex() const {
  return JITLangParser::RuleIf_stmt;
}


JITLangParser::If_stmtContext* JITLangParser::if_stmt() {
  If_stmtContext *_localctx = _tracker.createInstance<If_stmtContext>(_ctx, getState());
  enterRule(_localctx, 6, JITLangParser::RuleIf_stmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(JITLangParser::T__7);
    setState(75);
    match(JITLangParser::T__2);
    setState(76);
    dynamic_cast<If_stmtContext *>(_localctx)->cond = expr(0);
    setState(77);
    match(JITLangParser::T__3);
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == JITLangParser::T__0) {
      setState(78);
      match(JITLangParser::T__0);
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(84);
    match(JITLangParser::T__5);
    setState(90);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << JITLangParser::T__0)
      | (1ULL << JITLangParser::T__1)
      | (1ULL << JITLangParser::T__2)
      | (1ULL << JITLangParser::T__7)
      | (1ULL << JITLangParser::T__10)
      | (1ULL << JITLangParser::T__11)
      | (1ULL << JITLangParser::T__12)
      | (1ULL << JITLangParser::IDENT)
      | (1ULL << JITLangParser::STRING)
      | (1ULL << JITLangParser::NUMBER)
      | (1ULL << JITLangParser::COMMENT))) != 0)) {
      setState(88);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case JITLangParser::T__1:
        case JITLangParser::T__2:
        case JITLangParser::T__7:
        case JITLangParser::T__10:
        case JITLangParser::T__11:
        case JITLangParser::T__12:
        case JITLangParser::IDENT:
        case JITLangParser::STRING:
        case JITLangParser::NUMBER: {
          setState(85);
          dynamic_cast<If_stmtContext *>(_localctx)->stmtContext = stmt();
          dynamic_cast<If_stmtContext *>(_localctx)->statements.push_back(dynamic_cast<If_stmtContext *>(_localctx)->stmtContext);
          break;
        }

        case JITLangParser::T__0: {
          setState(86);
          match(JITLangParser::T__0);
          break;
        }

        case JITLangParser::COMMENT: {
          setState(87);
          match(JITLangParser::COMMENT);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(92);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(93);
    match(JITLangParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefineContext ------------------------------------------------------------------

JITLangParser::DefineContext::DefineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> JITLangParser::DefineContext::IDENT() {
  return getTokens(JITLangParser::IDENT);
}

tree::TerminalNode* JITLangParser::DefineContext::IDENT(size_t i) {
  return getToken(JITLangParser::IDENT, i);
}

JITLangParser::ExprContext* JITLangParser::DefineContext::expr() {
  return getRuleContext<JITLangParser::ExprContext>(0);
}


size_t JITLangParser::DefineContext::getRuleIndex() const {
  return JITLangParser::RuleDefine;
}


JITLangParser::DefineContext* JITLangParser::define() {
  DefineContext *_localctx = _tracker.createInstance<DefineContext>(_ctx, getState());
  enterRule(_localctx, 8, JITLangParser::RuleDefine);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    dynamic_cast<DefineContext *>(_localctx)->name = match(JITLangParser::IDENT);
    setState(96);
    match(JITLangParser::T__8);
    setState(97);
    dynamic_cast<DefineContext *>(_localctx)->type = match(JITLangParser::IDENT);
    setState(98);
    match(JITLangParser::T__9);
    setState(99);
    dynamic_cast<DefineContext *>(_localctx)->value = expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignContext ------------------------------------------------------------------

JITLangParser::AssignContext::AssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JITLangParser::AssignContext::IDENT() {
  return getToken(JITLangParser::IDENT, 0);
}

JITLangParser::ExprContext* JITLangParser::AssignContext::expr() {
  return getRuleContext<JITLangParser::ExprContext>(0);
}


size_t JITLangParser::AssignContext::getRuleIndex() const {
  return JITLangParser::RuleAssign;
}


JITLangParser::AssignContext* JITLangParser::assign() {
  AssignContext *_localctx = _tracker.createInstance<AssignContext>(_ctx, getState());
  enterRule(_localctx, 10, JITLangParser::RuleAssign);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    dynamic_cast<AssignContext *>(_localctx)->name = match(JITLangParser::IDENT);
    setState(102);
    match(JITLangParser::T__9);
    setState(103);
    dynamic_cast<AssignContext *>(_localctx)->value = expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

JITLangParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JITLangParser::Func_callContext* JITLangParser::ExprContext::func_call() {
  return getRuleContext<JITLangParser::Func_callContext>(0);
}

JITLangParser::AtomContext* JITLangParser::ExprContext::atom() {
  return getRuleContext<JITLangParser::AtomContext>(0);
}

std::vector<JITLangParser::ExprContext *> JITLangParser::ExprContext::expr() {
  return getRuleContexts<JITLangParser::ExprContext>();
}

JITLangParser::ExprContext* JITLangParser::ExprContext::expr(size_t i) {
  return getRuleContext<JITLangParser::ExprContext>(i);
}

tree::TerminalNode* JITLangParser::ExprContext::AND() {
  return getToken(JITLangParser::AND, 0);
}

tree::TerminalNode* JITLangParser::ExprContext::OR() {
  return getToken(JITLangParser::OR, 0);
}


size_t JITLangParser::ExprContext::getRuleIndex() const {
  return JITLangParser::RuleExpr;
}



JITLangParser::ExprContext* JITLangParser::expr() {
   return expr(0);
}

JITLangParser::ExprContext* JITLangParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  JITLangParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  JITLangParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 12;
  enterRecursionRule(_localctx, 12, JITLangParser::RuleExpr, precedence);

    size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(114);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      setState(106);
      func_call();
      break;
    }

    case 2: {
      setState(107);
      atom();
      break;
    }

    case 3: {
      setState(108);
      dynamic_cast<ExprContext *>(_localctx)->preop = _input->LT(1);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << JITLangParser::T__10)
        | (1ULL << JITLangParser::T__11)
        | (1ULL << JITLangParser::T__12))) != 0))) {
        dynamic_cast<ExprContext *>(_localctx)->preop = _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(109);
      expr(9);
      break;
    }

    case 4: {
      setState(110);
      match(JITLangParser::T__2);
      setState(111);
      dynamic_cast<ExprContext *>(_localctx)->paren = expr(0);
      setState(112);
      match(JITLangParser::T__3);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(144);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(142);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(116);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(117);
          dynamic_cast<ExprContext *>(_localctx)->mult = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << JITLangParser::T__13)
            | (1ULL << JITLangParser::T__14)
            | (1ULL << JITLangParser::T__15))) != 0))) {
            dynamic_cast<ExprContext *>(_localctx)->mult = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(118);
          expr(9);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(119);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(120);
          dynamic_cast<ExprContext *>(_localctx)->add = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == JITLangParser::T__16

          || _la == JITLangParser::T__17)) {
            dynamic_cast<ExprContext *>(_localctx)->add = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(121);
          expr(8);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(122);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(123);
          dynamic_cast<ExprContext *>(_localctx)->gt = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << JITLangParser::T__18)
            | (1ULL << JITLangParser::T__19)
            | (1ULL << JITLangParser::T__20)
            | (1ULL << JITLangParser::T__21))) != 0))) {
            dynamic_cast<ExprContext *>(_localctx)->gt = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(124);
          expr(7);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(125);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(126);
          dynamic_cast<ExprContext *>(_localctx)->eq = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == JITLangParser::T__22

          || _la == JITLangParser::T__23)) {
            dynamic_cast<ExprContext *>(_localctx)->eq = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(127);
          expr(6);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(128);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(129);
          dynamic_cast<ExprContext *>(_localctx)->logAnd = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == JITLangParser::T__24

          || _la == JITLangParser::AND)) {
            dynamic_cast<ExprContext *>(_localctx)->logAnd = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(130);
          expr(4);
          break;
        }

        case 6: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(131);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(132);
          dynamic_cast<ExprContext *>(_localctx)->logOr = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == JITLangParser::T__25

          || _la == JITLangParser::OR)) {
            dynamic_cast<ExprContext *>(_localctx)->logOr = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(133);
          expr(3);
          break;
        }

        case 7: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          _localctx->cond = previousContext;
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(134);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(135);
          dynamic_cast<ExprContext *>(_localctx)->tern = match(JITLangParser::T__26);
          setState(136);
          dynamic_cast<ExprContext *>(_localctx)->t = expr(0);
          setState(137);
          match(JITLangParser::T__8);
          setState(138);
          dynamic_cast<ExprContext *>(_localctx)->f = expr(2);
          break;
        }

        case 8: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(140);

          if (!(precpred(_ctx, 10))) throw FailedPredicateException(this, "precpred(_ctx, 10)");
          setState(141);
          dynamic_cast<ExprContext *>(_localctx)->postop = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == JITLangParser::T__10

          || _la == JITLangParser::T__11)) {
            dynamic_cast<ExprContext *>(_localctx)->postop = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          break;
        }

        default:
          break;
        } 
      }
      setState(146);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- AtomContext ------------------------------------------------------------------

JITLangParser::AtomContext::AtomContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JITLangParser::LiteralContext* JITLangParser::AtomContext::literal() {
  return getRuleContext<JITLangParser::LiteralContext>(0);
}

tree::TerminalNode* JITLangParser::AtomContext::IDENT() {
  return getToken(JITLangParser::IDENT, 0);
}


size_t JITLangParser::AtomContext::getRuleIndex() const {
  return JITLangParser::RuleAtom;
}


JITLangParser::AtomContext* JITLangParser::atom() {
  AtomContext *_localctx = _tracker.createInstance<AtomContext>(_ctx, getState());
  enterRule(_localctx, 14, JITLangParser::RuleAtom);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(149);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case JITLangParser::STRING:
      case JITLangParser::NUMBER: {
        enterOuterAlt(_localctx, 1);
        setState(147);
        literal();
        break;
      }

      case JITLangParser::IDENT: {
        enterOuterAlt(_localctx, 2);
        setState(148);
        match(JITLangParser::IDENT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Typed_arg_listContext ------------------------------------------------------------------

JITLangParser::Typed_arg_listContext::Typed_arg_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<JITLangParser::Typed_argContext *> JITLangParser::Typed_arg_listContext::typed_arg() {
  return getRuleContexts<JITLangParser::Typed_argContext>();
}

JITLangParser::Typed_argContext* JITLangParser::Typed_arg_listContext::typed_arg(size_t i) {
  return getRuleContext<JITLangParser::Typed_argContext>(i);
}


size_t JITLangParser::Typed_arg_listContext::getRuleIndex() const {
  return JITLangParser::RuleTyped_arg_list;
}

